<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/about_title">

    <Preference
        android:summary="@string/versionName"
        android:title="Version Name" />

    <Preference
        android:summary="@string/versionCode"
        android:title="Version Code" />

    <SwitchPreference
        android:key="dark_theme"
        android:title="Dark Theme"
        android:defaultValue="false"
        android:summary="Restart the app to apply changes"/>

    <PreferenceCategory
        android:key="owner"
        android:title="@string/owner_title">

        <Preference
            android:icon="@drawable/ic_developer"
            android:summary="@string/owner_summary"
            android:title="@string/owner_name">
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="developer"
        android:title="@string/dev_title">

        <Preference
            android:icon="@drawable/ic_developer"
            android:summary="@string/dev_summary"
            android:title="@string/dev_name">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/chankruze" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="links"
        android:title="@string/links_title">

        <Preference
            android:icon="@drawable/ic_announcements"
            android:key="announcements"
            android:summary="@string/announcements_summary"
            android:title="@string/announcements_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/announcements_channel" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_telegram"
            android:key="telegram"
            android:summary="@string/telegram_summary"
            android:title="@string/telegram_title">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/telegram_group" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_discord"
            android:key="discord"
            android:summary="@string/discord_summary"
            android:title="@string/discord_title">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/discord_invite" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_website"
            android:key="website"
            android:summary="@string/website_title_summary"
            android:title="@string/website_title">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/website_url" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_rate"
            android:key="source"
            android:summary="@string/rate_summary"
            android:title="@string/rate_title">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/store_url" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_explore"
            android:key="source"
            android:summary="@string/explore_summary"
            android:title="@string/explore_title">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/explore_url" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>