<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Input Long URL -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_long_url"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_long_url"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_long_url"
            app:helperTextEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_long_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Input Custom URL -->
        <LinearLayout
            android:id="@+id/rl_domain_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ti_long_url"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_dropdown_domain"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/hint_domain_dropdown">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_custom_domain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:focusable="false"
                    android:text="@string/str_def_domain" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_custom_url"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/ti_dropdown_domain"
                android:hint="@string/hint_custom_url"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_custom_url"
                app:helperTextEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_custom_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_"
                    android:maxLength="30"
                    android:maxLines="3" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Statistics Checkbox-->
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/check_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_domain_setting"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/str_stats" />

        <!-- Shorten Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_shorten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/check_stats"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/str_shorten"
            app:icon="@drawable/ic_shorten" />

    </RelativeLayout>

</ScrollView>