<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:endIconMode="none">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input Custom URL -->
    <LinearLayout
        android:id="@+id/layout_domain_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:layout_below="@id/layout_text_input">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_domain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:helperText="@string/hint_domain_dropdown">

            <AutoCompleteTextView
                android:id="@+id/custom_domain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="@string/str_def_domain"
                android:focusable="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_custom_url"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_custom_url"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_custom_url"
            android:layout_marginTop="8dp"
            app:helperTextEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            android:layout_toEndOf="@id/dropdown_domain"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/custom_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_"
                android:maxLength="30"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/check_d_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_domain_setting"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/str_stats" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_d_shorten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_domain_setting"
        android:layout_alignParentEnd="true"
        android:enabled="false"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/str_shorten"
        app:icon="@drawable/ic_shorten" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_d_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_domain_setting"
        android:layout_alignParentEnd="true"
        android:enabled="false"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/str_share"
        android:visibility="gone"
        app:icon="@drawable/ic_share" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_d_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_domain_setting"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@id/btn_d_share"
        android:enabled="false"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/str_copy"
        android:visibility="gone"
        app:icon="@drawable/ic_copy" />

</RelativeLayout>