<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/rl_long_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/tv_long_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_rounded"
            android:maxLines="3"
            tools:text="nasty url" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_long_url">

        <!-- qr code -->
        <ImageView
            android:id="@+id/iv_qr"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_qr" />

        <TextView
            android:id="@+id/tv_short_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_qr"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rounded"
            android:textSize="18sp"
            tools:text="https://is.gd/5qHgQP" />

        <!-- action buttons -->
        <LinearLayout
            android:id="@+id/ll_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_short_url"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/str_share"
                app:icon="@drawable/ic_share" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/str_copy"
                app:icon="@drawable/ic_copy" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_actions"
            android:layout_centerHorizontal="true"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/str_btn_stats"
            app:icon="@drawable/ic_stats" />

    </RelativeLayout>

</RelativeLayout>